修复master代码被覆盖的问题

--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -313,7 +313,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            window.open("/termite2/termite_preview/?view_editing_data=true&id="+W.projectId);
+            window.open("/termite2/termite_preview/?view_editing_data=true&page_id=preview&project_id="+W.projectId);
           },
           error: function(resp) {
 
