--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -12,6 +12,29 @@
             background: none;
             color: #1262b7;
         }
+        .propertyGroup_property_label {
+          display: inline-block;
+          vertical-align: top;
+          margin-right: 7px;
+          line-height: 24px;
+          text-align: right;
+          width: 60px;
+        }
+        .propertyGroup_property_input {
+            display: inline-block;
+        }
+        .propertyGroup_property_textareaField .propertyGroup_property_input {
+          width: 80% !important;
+        }
+        .propertyGroup_property_dynamicControlField.propertyGroup_property_horizontalField.xui-product.ui-sortable {
+          border-top: 1px solid #ccc;
+          margin-top: 12px;
+        }
+        .propertyGroup_property_dynamicControlField_control {
+          border: 1px solid #ccc;
+          width: 100% !important;
+          padding: 10px 10px !important;
+        }
     </style>
 {% endblock %}
 
