--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -176,13 +176,13 @@
 }
 .xui-memberListPage .icon-arrow-up {
   /* background: #000; */
-  background: url('/static_v2/img/weixin/storingUp.png') no-repeat; 
+  background: url('/static_v2/img/weixin/storingUp.png') no-repeat;
 }
 .xui-memberListPage .icon-arrow-down {
   /* background: #000; */
-   background: url('/static_v2/img/weixin/storing.png') no-repeat; 
+   background: url('/static_v2/img/weixin/storing.png') no-repeat;
 }
-.xui-memberListPage [class^="icon-"] {
+.xui-memberListPage [class^="icon-"], .xui-firendlistdialog [class^="icon-"] {
   display: inline-block;
   width: 9px;
   height: 14px;
@@ -192,6 +192,15 @@
 }
 .xui-firendlistdialog .modal-footer {
 	height: 0px;
+}
+
+.xui-firendlistdialog .icon-arrow-up {
+  /* background: #000; */
+  background: url('/static_v2/img/weixin/storingUp.png') no-repeat;
+}
+.xui-firendlistdialog .icon-arrow-down {
+  /* background: #000; */
+   background: url('/static_v2/img/weixin/storing.png') no-repeat;
 }
 .xui-memberListPage .xui-Blue{
 	color:#1262b7!important;
@@ -581,7 +590,7 @@
 .xui-page-memberDetail .xui-content{
 	margin-left: 0px !important;
 	background-color:#EAEEF5;
-	
+
 }
 .xui-page-memberDetail .xui-content-address{
 	min-height: 108px;
