抽奖详情页面，展示所有抽奖的列表，包括未中奖，同时修改页面面包屑为“抽奖详情”，页面描述文字

--- a/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participances.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participances.html
@@ -17,14 +17,14 @@
 			<li>您当前所在位置</li>
 			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 			<li><a href="/apps/lottery/lotteries/">微信抽奖</a></li>
-			<li class="active">中奖详情</li>
+			<li class="active">抽奖详情</li>
 		</ul>
 	</div>
 	
 	<div class="xui-formPanel pb10 mb15">
 		<div class="xui-i-col">
 			<div class="xui-i-item">
-				<label class="">中奖用户：</label>
+				<label class="">抽奖用户：</label>
 				<input type="text" class="form-control" id="participant_name" name="participant_name" value="" />
 			</div>
             <div class="xui-i-item">
@@ -34,6 +34,7 @@
                     <option value="integral">积分</option>
                     <option value="coupon">优惠券</option>
                     <option value="entity">实物</option>
+					<option value="no_prize">未中奖</option>
                 </select>
             </div>
 		</div>
@@ -120,11 +121,11 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>中奖用户</th>
+				<th>抽奖用户</th>
 				<th>手机号</th>
 				<th>获奖等级</th>
 				<th>奖品名称</th>
-				<th>中奖时间</th>
+				<th>抽奖时间</th>
 				<th>领取状态</th>
 				<th>操作</th>
 			</tr>
