百宝箱问题---详情

--- a/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
@@ -137,7 +137,7 @@
 					${item.participant_count}
 				</td>
 				<td>
-				    <a href="/apps/lottery/lottery_participances/?id=${item.id}" class="ml5">详情</a>
+				    <a href="/apps/lottery/lottery_participances/?id=${item.id}" class="ml5">查看结果</a>
 					{{if (item.status === '未开始' || item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
