--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -16,7 +16,7 @@
                 {% if component.model.limitation == 'none' %}0{% endif %}</b>次抽奖机会！</p>
         </div>
         <div class="wui-i-roulette wui-i-header xa-remainedIntegral">
-            <p>还剩<b></b>积分</p>
+            需要消耗<strong>{{ component.model.expend }}</strong>积分, <p style="display: inline-block">还剩<b></b>积分</p>
         </div>
         <div class="wui-i-roulette wui-i-body">
             <div class="xui-circle xa-circle xa-circle-unit-0"></div>
