--- a/weapp/termite/static/termite_js/app/component/appkit/selection/selection.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/selection/selection.html
@@ -14,7 +14,7 @@
 		data-input-type="selection"
 		data-control-type="appkit.selection"
 		{% if component.model.is_mandatory == "true" %}
-		data-validate='require-select-input::请选择"{{component.model.title}}"'
+		data-validate='require-select-span::请选择"{{component.model.title}}"'
 		{% endif %}
 	>
 		{% for sub_component in component.components %}
@@ -34,11 +34,13 @@
 >
 	{% if component.parent_component.model.type == 'single' %}
 	<label for="radio_item_{{component.cid}}" style="display:block; padding: 3px 0px;">
-		<input id="radio_item_{{component.cid}}" type="radio" name="radio_{{component.parent_component.cid}}" data-input-name="{{ component.model.title }}"/><span class="ml5 xa-itemTitle">{{ component.model.title }}</span>
+		<span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}" data-type="radio"  class="selection-radio" data-input-name="{{ component.model.title }}"></span><span class="ml5 xa-itemTitle" style="margin-left: 34px!important;">{{ component.model.title }}</span>
+{#		<input  type="radio" name="radio_{{component.parent_component.cid}}" "/><span class="ml5 xa-itemTitle">{{ component.model.title }}</span>#}
 	</label>
 	{% else %}
 	<label for="checkbox_item_{{component.cid}}" style="display:block; padding: 3px 0px;">
-		<input id="checkbox_item_{{component.cid}}" type="checkbox" name="checkbox_{{component.cid}}" data-input-name="{{ component.model.title }}"/><span class="ml5 xa-itemTitle">{{ component.model.title }}</span>
+		<span id="checkbox_item_{{component.cid}}" name="checkbox_{{component.parent_component.cid}}" data-type="checkbox"  class="selection-checkbox" data-input-name="{{ component.model.title }}"></span><span class="ml5 xa-itemTitle" style="margin-left: 34px!important;">{{ component.model.title }}</span>
+{#		<input id="checkbox_item_{{component.cid}}" type="checkbox" name="checkbox_{{component.cid}}" data-input-name="{{ component.model.title }}"/><span class="ml5 xa-itemTitle">{{ component.model.title }}</span>#}
 	</label>
 	{% endif %}
 </li>
