--- a/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
+++ b/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
@@ -80,7 +80,19 @@
                         <li class="wui-i-item">
                             <div class="cover_div" style="position: absolute;z-index: 999;height: 50px;"></div>
                             <label style="padding: 3px 0;" >
-                                <img class="xui-name-isSelect" src="{% if select.isSelect %} /static_v2/img/selected.png {% else %} /static_v2/img/not_select.png{% endif %}" /><span class="ml5 xa-itemTitle">{{ select.name }}</span>
+                                <span class="
+                                    {% ifequal select.type 'radio' %}
+                                        selection-radio
+                                        {% ifequal select.isSelect True %}
+                                            radio-select
+                                        {% endifequal %}
+                                    {% else %}
+                                        selection-checkbox
+                                        {% ifequal select.isSelect True %}
+                                            checkbox-select
+                                        {% endifequal %}
+                                    {% endifequal %}"></span>
+                                <span class="ml5 xa-itemTitle" style="margin-left: 34px!important;">{{ select.name }}</span>
                             </label>
 
                         </li>
