--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -348,8 +348,12 @@
                     });
                     $('.selection-checkbox').click(function(event){
                         var $span = $(event.currentTarget);
-                        $span.parents('ul').find('label').find('span :first').removeClass('checkbox-select');
-                        $span.addClass('checkbox-select');
+                        if ($span.hasClass('checkbox-select')){
+                            $span.removeClass('checkbox-select');
+                        }else{
+                            $span.addClass('checkbox-select');
+
+                        }
                     });
                     $('.xa-submitTermite').click(function() {
                         if (!W.validate()) {
@@ -370,7 +374,7 @@
                             } else if (inputType === 'textarea') {
                                 var value = $.trim($control.find('textarea').val());
                             } else if (inputType === 'selection') {
-                                var $spans = $control.find('span[data-type="radio"');
+                                var $spans = $control.find('span[span-type="selection"');
                                 var value = {};
                                 var selectionInputType = $spans.eq(0).attr('data-type');
                                 for (var j = 0; j < $spans.length; ++j) {
@@ -382,7 +386,7 @@
                                     var class_name;
                                     if (selectionInputType === 'radio'){
                                         class_name = 'radio-select';
-                                    }else{
+                                    }else if(selectionInputType === 'checkbox'){
                                         class_name = 'checkbox-select';
                                     }
                                     var isSelect = $span.hasClass(class_name);
