1、调整抽奖后台样式 2、增加对member的容错

--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -35,6 +35,9 @@
           width: 100% !important;
           padding: 10px 10px !important;
         }
+        input[value*='等奖']{
+            border: none;
+        }
     </style>
 {% endblock %}
 
