--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -419,7 +419,9 @@
                         }
                         //必须关注才可以参与的活动
                         if (W.permission == 'member') {
-                            if (W.isMember == true) {
+                            alert('member');
+                            alert(W.isMember);
+                            if (W.isMember) {
                                 getParticipance(participanceData,$submitButtonContainer);
 
                             } else {
@@ -429,6 +431,7 @@
                             }
                         }
                         else{
+                            alert(W.isMember);
                             getParticipance(participanceData,$submitButtonContainer);
                         }
 
