--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -357,6 +357,7 @@
                     $('.xa-submitTermite').click(function() {
                         alert('click');
                         if (!W.validate()) {
+                            alert(W.validate());
                             return;
                         }
                         var data = {};
