--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -362,6 +362,7 @@
                         }
                         var data = {};
                         var $controls = $('.xa-inputControl');
+                        alert($controls);
                         for (var i = 0; i < $controls.length; ++i) {
                             var $control = $controls.eq(i);
                             var inputType = $control.attr('data-input-type');
