--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -355,14 +355,11 @@
                         }
                     });
                     $('.xa-submitTermite').click(function() {
-                        alert('click');
-                        alert(W.validate());
                         if (!W.validate()) {
                             return;
                         }
                         var data = {};
                         var $controls = $('.xa-inputControl');
-                        alert($controls);
                         for (var i = 0; i < $controls.length; ++i) {
                             var $control = $controls.eq(i);
                             var inputType = $control.attr('data-input-type');
@@ -376,7 +373,7 @@
                             } else if (inputType === 'textarea') {
                                 var value = $.trim($control.find('textarea').val());
                             } else if (inputType === 'selection') {
-                                var $spans = $control.find('span[span-type="selection"');
+                                var $spans = $control.find('span[span-type="selection"]');
                                 alert($spans);
                                 var value = {};
                                 var selectionInputType = $spans.eq(0).attr('data-type');
@@ -394,7 +391,6 @@
                                         class_name = 'checkbox-select';
                                     }
                                     var isSelect = $span.hasClass(class_name);
-                                    alert(selectionInputName,selectionInputType,isSelect);
                                     value[selectionInputName] = {
                                         type: selectionInputType,
                                         isSelect: isSelect
@@ -423,11 +419,8 @@
                                 'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
                             }]);
                         }
-                        alert(W.permission);
                         //必须关注才可以参与的活动
                         if (W.permission == 'member') {
-                            alert('member');
-                            alert(W.isMember);
                             if (W.isMember) {
                                 getParticipance(participanceData,$submitButtonContainer);
 
