--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -419,7 +419,7 @@
                         }
                         //必须关注才可以参与的活动
                         if (W.permission == 'member') {
-                            if (W.isMember) {
+                            if (W.isMember == true) {
                                 getParticipance(participanceData,$submitButtonContainer);
 
                             } else {
