--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -143,7 +143,7 @@
  * 用户调研survey description样式
  */
 .wui-surveyDescription {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
 }
 .wui-surveyDescription .wui-i-title {
 	font-size: 20px;
@@ -174,7 +174,7 @@
 .wui-surveyDescription .wui-i-info {
 	border-top: solid 1px #E5E5E5;
 	font-size: 14px;
-	padding: 25px 0px 5px 0px;
+	padding: 7px 0px 5px 0px;
     color: #999;
 
 }
@@ -241,12 +241,14 @@
 }
 .wui-textSelection .wui-i-item {
 	padding: 3px 0px;
-	border-bottom: solid 1px #E5E5E5;
+	/*border-bottom: solid 1px #E5E5E5;*/
 }
 .wui-textSelection .wui-i-item:last-child {
 	border-bottom: none;
 }
-
+.wui-textSelection span.ml5.xa-itemTitle {
+  line-height: 22px;
+}
 
 
 
