--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -237,10 +237,14 @@
             }else if(prize_type == 'no_prize'){
                 this.$title.html('很遗憾');
                 this.$contentHeader.html("没有中奖，再接再厉吧~");
+                this.$userCenter.show();
+                this.$closeBtn.show();
             }else if(prize_type == 'coupon' || prize_type == 'integral'){
                 this.$title.html('中奖了耶');
                 var msg = prize_type == 'coupon' ? ('一张优惠券：'+prize_name): prize_name;
                 this.$contentHeader.html("恭喜您获得了"+msg+"！快去个人中心查看吧！");
+                this.$userCenter.show();
+                this.$closeBtn.show();
             }else if(prize_type == 'gameover'){
                 this.$title.css('visibility','hidden');
                 this.$contentHeader.html("活动已经结束啦，<br>下次早点来哦~");
