--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -91,7 +91,7 @@
 					{{/if}}
 
 					{{if (field.type == 'slider')}}
-					<div class="propertyGroup_property_sliderField propertyGroup_property_horizontalField mt10">
+					<div class="propertyGroup_property_sliderField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label mr5 {{if field.validate}}star_show{{/if}}">${field.displayName}：</div>
 						<div class="propertyGroup_property_input xui-progress-bar mr15">
 							<input type="text" class="input-small xui-propertyGroup-input xa-progress-bar" data-field="${field.name}" value="${model.get(field.name)}" placeholder="${field.placeholder}" {{if field.validate}}data-validate="${field.validate}"{{/if}} />
@@ -101,7 +101,7 @@
 					{{/if}}
 
 					{{if (field.type == 'date_range_selector')}}
-					<div class="propertyGroup_property_dateRangeSelectorField propertyGroup_property_horizontalField mt10">
+					<div class="propertyGroup_property_dateRangeSelectorField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label mr5 {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
 						<div class="propertyGroup_property_input pl5 xa-thirdPartyPlugin" data-plugin="daterange">
 							<input 
@@ -148,7 +148,7 @@
 					{{/if}}
 
 					{{if (field.type == 'prize_selector')}}
-					<div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField mt10">
+					<div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label mr5 {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
 						<div class="propertyGroup_property_input pl5 xa-thirdPartyPlugin" data-plugin="prize_selector" data-field="${field.name}">
 							<div 
