--- a/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
@@ -28,7 +28,8 @@
 			class="xui-propertyGroup-input xa-entity"
 			name="entity"
 			placeholder="输入实物名称"
-			data-validate="require-notempty::实物名称不能为空"
+			data-validate="require-string"
+            data-maxlength="10"
 			{{#if prize.data}}value="{{prize.data}}"{{/if}} />
 		<div class="errorHint" style="margin-left: 37%;"></div>
 	</div>
