--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -29,7 +29,7 @@
         top: 20%;
         left: 5%;
         width: 90%;
-        height: 235px;
+        height: 42%;
         border-radius: 5px;
         z-index: 1;
     }
@@ -90,7 +90,7 @@
         font-size: 1rem;
         font-weight: bolder;
         border-radius: 3px;
-        width: 130px;
+        width: 170px;
         display: block;
         margin: 5px auto;
     }
