--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -171,7 +171,7 @@
         </div>
         -->
         <div class="wui-i-record cl pt5 pb15">
-            <div class="wui-i-settingTitle fl mr15">中奖记录:</div>
+            <div class="wui-i-settingTitle fl mr15 mb10">中奖记录:</div>
             <div class="wui-i-recordData xa-recordData fl mb20">
                 <ul>
                 </ul>
