--- a/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
+++ b/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
@@ -91,7 +91,7 @@
                                             checkbox-select
                                         {% endifequal %}
                                     {% endifequal %}"></span>
-                                <span class="ml5 xa-itemTitle" style="margin-left: 34px!important;">{{ select.name }}</span>
+                                <span class="ml5 xa-itemTitle" style="margin-left: 34px!important;display: block;min-height: 22px;">{{ select.name }}</span>
                             </label>
 
                         </li>
