--- a/weapp/apps/templates/apps/user_apps_list.html
+++ b/weapp/apps/templates/apps/user_apps_list.html
@@ -105,7 +105,7 @@ a.xui-appList-app{
   <div class="xui-old-apps-Dialog">
       <div class="xui-old-apps-Dialog-title">系统公告：</div>
       <div class="xui-old-apps-Dialog-body">
-          新百宝箱已升级路径为微商城>百宝箱，旧百宝箱将于9月15日关闭入口，在此期间旧百宝箱只能查看原始数据不能创建新活动。如需创建新活动请<a href="/apps/lottery/lotteries/">点击这里</a>，谢谢支持！
+          新百宝箱已升级,路径为<a href="/apps/lottery/lotteries/">微商城>百宝箱</a>，旧百宝箱将于9月30日关闭入口，在此期间旧百宝箱只能查看原始数据不能创建新活动。如需创建新活动请<a href="/apps/lottery/lotteries/">点击这里</a>，谢谢支持！
       </div>
   </div>
   <div class="">
