--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -160,9 +160,9 @@
                 </ul>
             </div>
         </div>
-		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;">
-			<div class="wui-i-settingTitle fl mr15">活动时间:</div>
-            <p class="wui-i-start_time">{{component.model.start_time}}</p>-<p class="wui-i-end_time">{{component.model.end_time}}</p>
+		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
+			<div class="wui-i-settingTitle fl mr15">活动时间</div>
+            <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
 		</div>
         <!--
         <i class="wui-i-sprite xui-sprite-prize"></i>
@@ -171,7 +171,7 @@
         </div>
         -->
         <div class="wui-i-record cl pt5 pb15">
-            <div class="wui-i-settingTitle fl mr15 mb10">中奖记录:</div>
+            <div class="wui-i-settingTitle fl mr15 mb10">中奖记录</div>
             <div class="wui-i-recordData xa-recordData fl mb20">
                 <ul>
                 </ul>
