--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -239,7 +239,7 @@
             this.$title.css('visibility','visible');
             if(prize_type == 'entity'){
                 this.$title.html('中奖了耶');
-                this.$contentHeader.html("恭喜您获得了"+prize_name+'！');
+                this.$contentHeader.html("恭喜您获得了<br>"+prize_name+'！');
                 this.$entityContent.show();
                 this.$userCenter.hide();
                 this.$closeBtn.hide();
